# vulkan_engine2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  a.json  compile_shader.sh  imgui.ini
demos/1/: CMakeLists.txt  main.cpp
demos/2/: CMakeLists.txt  main.cpp
demos/2/res/: 1.frag  1.vert  materials.json
demos/raytrace/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  raytracer.cpp  raytracer.hpp
demos/raytrace/shaders/: device_buffers.h  post_process.frag  random.glsl  raytrace.comp  screen_quad.vert
include/: vke_engine.hpp
pch/: pch.hpp
res/: 1.frag  1.vert  materials.json
src/: common.hpp  engine.cpp  engine.hpp  fwd.hpp  game_engine.cpp  game_engine.hpp  main.cpp
src/entity/: Entity.hpp
src/mesh/: mesh.cpp  mesh.hpp  mesh_renderer.cpp  mesh_renderer.hpp  shapes.hpp
src/mesh/shader/: default.vert  pipelines.json
src/render/: iobject_renderer.hpp  object_renderer.cpp  object_renderer.hpp  render_server.cpp  render_server.hpp  render_system.cpp  render_system.hpp  scene_set.cpp  scene_set.hpp
src/render/debug/: gpu_timing_system.cpp  gpu_timing_system.hpp  line_drawer.cpp  line_drawer.hpp
src/render/gltf_loader/: gltf_loader.cpp  gltf_loader.hpp
src/render/imgui/: imgui_manager.cpp  imgui_manager.hpp
src/render/mesh/: mesh.cpp  mesh.hpp  mesh_renderer.cpp  mesh_renderer.hpp  mesh_util.cpp  mesh_util.hpp  shapes.cpp
src/render/mesh/shader/: cull_shader.comp  default.frag  default.vert  indirect_draw_gen.comp  material_set.glsl  pipelines.json  quat_util.glsl  scene_data.h  scene_set.glsl
src/render/object_renderer/: generic_entity_gpu_handle_manager.hpp  hierarchical_z_buffers.cpp  hierarchical_z_buffers.hpp  iobject_renderer_system.hpp  light_buffers_manager.cpp  light_buffers_manager.hpp  object_renderer.cpp  object_renderer.hpp  render_state.hpp  render_util.cpp  render_util.hpp  renderer_common.cpp  renderer_common.hpp  resource_manager.cpp  resource_manager.hpp  scene_buffers_manager.cpp  scene_buffers_manager.hpp
src/render/object_renderer/sub_systems/: indirect_model_renderer.cpp  indirect_model_renderer.hpp
src/render/render_pipeline/: defered_render_pipeline.cpp  defered_render_pipeline.hpp
src/render/shader/: cull_shader.comp  debug_line.frag  debug_line.vert  default.frag  default.vert  deferred.frag  depth_mip_chain.comp  gpass.frag  indirect_draw_gen.comp  pipelines.json  scene_data.h  scene_set.glsl  shadow.frag  view_set.glsl
src/render/shader/include/vke/fs_io/: default.glsl
src/render/shader/include/vke/fs_output/: auto.glsl  default.glsl  gpass.glsl  shadow.glsl
src/render/shader/include/vke/sets/: scene_data.h  scene_set.glsl  view_set.glsl
src/render/shader/include/vke/util/: cull_util.glsl  dither.glsl  hash.glsl
src/render/shader/include/vke/vs_input/: default.glsl
src/render/shader/indirect_model_renderer/: pipelines.json
src/render/shader/shader_lib/vke/: debug_line.frag  default.vert  deferred.frag  deferred.vert
src/render/shadow/: direct_shadow_map.cpp  direct_shadow_map.hpp  ishadow_map.cpp  ishadow_map.hpp  shadow_manager.cpp  shadow_manager.hpp  shadow_utils.cpp  shadow_utils.hpp
src/render/window/: window_sdl.cpp  window_sdl.hpp
src/scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp  scene_data.cpp  scene_data.hpp
src/scene/components/: components.hpp  transform.cpp  transform.hpp  util.cpp  util.hpp
src/scene/ui/: instantiate_menu.cpp  instantiate_menu.hpp
src/ui/: imenu.hpp
src/vke/: buffer.hpp  commandbuffer.cpp  commandbuffer.hpp  core.cpp  core.hpp  descriptor_pool.hpp  descriptor_set_builder.hpp  descriptor_set_layout_builder.hpp  engine.cpp  engine.hpp  fence.hpp  fwd.hpp  image.cpp  image_load.cpp  material_manager.cpp  material_manager.hpp  multi_pass_renderpass.cpp  multi_pass_renderpass.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_cache.cpp  pipeline_cache.hpp  render_pass_builder.cpp  render_pass_builder.hpp  renderpass.cpp  renderpass.hpp  sampler_manager.cpp  semaphore.hpp  util.cpp  util.hpp  vk_resource.hpp  vk_system.cpp  vk_system.hpp  vkutil.hpp  window.cpp  window.hpp  window_sdl.cpp  window_sdl.hpp
src/vke/core/: buffer.cpp  buffer.hpp  buffer_reflection.cpp  buffer_reflection.hpp  commandbuffer.cpp  commandbuffer.hpp  core.cpp  core.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_builder.cpp  descriptor_set_builder.hpp  descriptor_set_layout_builder.hpp  fence.cpp  fence.hpp  image.cpp  image.hpp  image_load.cpp  image_view.cpp  image_view.hpp  multi_pass_renderpass.cpp  multi_pass_renderpass.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_cache.hpp  pipeline_reflection.cpp  pipeline_reflection.hpp  pipeline_reflections.cpp  pipeline_reflections.hpp  reflected_buffer.cpp  reflected_buffer.hpp  render_pass_builder.cpp  render_pass_builder.hpp  renderpass.cpp  renderpass.hpp  sampler_manager.cpp  sampler_manager.hpp  semaphore.cpp  (+12 more)
src/vke/engine/: batch_uploader.cpp  batch_uploader.hpp  camera.cpp  camera.hpp  engine.cpp  engine.hpp  irender_system.hpp  irender_target.hpp  istencil_buffer.hpp  material_manager.cpp  material_manager.hpp  mesh.hpp  render_target.cpp  render_target.hpp  stencil_buffer.cpp  stencil_buffer.hpp  vk_system.cpp  vk_system.hpp
src/vke/engine/material_loader/: material_loader.cpp  material_loader.hpp
src/vke/engine/mesh_loader/: gltf.hpp
src/vke/imgui/: CMakeLists.txt  imgui_manager.cpp  imgui_manager.hpp
src/vke/material_loader/: material_loader.cpp  material_loader.hpp
src/vke/serialization/: glm.hpp  json_serialization.hpp  serializer.hpp
src/vke/util/: arena_alloc.cpp  arena_alloc.hpp  event_system.hpp  function_timer.cpp
src/window/: window_sdl.cpp
src/windows/: window_sdl.hpp
vke/: CMakeLists.txt  buffer.cpp  buffer.hpp  common.hpp  core.cpp  descriptor_pool.cpp  descriptor_set_builder.cpp  descriptor_set_layout_builder.cpp  fence.cpp  fwd.hpp  image.hpp  pipeline_builder.cpp  renderpass.cpp  sampler_manager.hpp  surface.hpp  vertex_input_builder.hpp  vk_resource.cpp  window_sdl.cpp
(+2 files in other folders)
